// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 1`] = `
<ul
  className="css-1u8qly9"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 2`] = `
<ul
  className="css-1hc2wnn"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 3`] = `
<ul
  className="css-1hc2wnn"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
        <span>
          Teachers Blog
        </span>
      </div>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
        <span>
          Teens Instagram
        </span>
      </div>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 4`] = `
<ul
  className="css-1hc2wnn"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 5`] = `
<ul
  className="css-1hc2wnn"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 6`] = `
<ul
  className="css-1hc2wnn"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
        <span>
          Teachers Blog
        </span>
      </div>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
        <span>
          Teens Instagram
        </span>
      </div>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 7`] = `
<ul
  className="css-fg54o4"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 8`] = `
<ul
  className="css-fg54o4"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
        <span>
          Teachers Blog
        </span>
      </div>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
        <span>
          Teens Instagram
        </span>
      </div>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 9`] = `
<ul
  className="css-fg54o4"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 10`] = `
<ul
  className="css-fg54o4"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 11`] = `
<ul
  className="css-fg54o4"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
        <span>
          Teachers Blog
        </span>
      </div>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
        <span>
          Teens Instagram
        </span>
      </div>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 12`] = `
<ul
  className="css-1u8qly9"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
        <span>
          Teachers Blog
        </span>
      </div>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
        <span>
          Teens Instagram
        </span>
      </div>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 13`] = `
<ul
  className="css-1u8qly9"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 14`] = `
<ul
  className="css-1u8qly9"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
        <span>
          Teachers Blog
        </span>
      </div>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
        <span>
          Teens Instagram
        </span>
      </div>
    </a>
  </li>
</ul>
`;

exports[`SocialMediaLinks Snapshot Renders the UI snapshot correctly when the layout is in a row. 15`] = `
<ul
  className="css-1u8qly9"
  data-testid="ds-socialMediaLinks"
  id="socialmedialinks-test"
>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/blog/all?channel=732"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgFileTypeGenericDoc"
          focusable={false}
          role="img"
          title="Teachers Blog"
        />
      </div>
      <span
        className="css-0"
      >
        Teachers Blog
      </span>
    </a>
  </li>
  <li>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.instagram.com/nyplteens/?hl=en"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      <div
        className="ds-socialMediaLinks-icon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSocialInstagram"
          focusable={false}
          role="img"
          title="Teens Instagram"
        />
      </div>
      <span
        className="css-0"
      >
        Teens Instagram
      </span>
    </a>
  </li>
</ul>
`;
